# gettext

./: CONTRIBUTING.md  README.md  dune-project  gettext.opam
lib/: dune  gettext.ml  gettext.mli
lib/locale/: dune  gettext_locale.mli
lib/po/: dune  gettext_po.ml  gettext_po.mli  utils.ml
test/: dune  gettext_test.ml
